RESOLVED FIXED155971
Inline WebFullScreenVideoRootViewController.m
https://bugs.webkit.org/show_bug.cgi?id=155971
Summary Inline WebFullScreenVideoRootViewController.m
mitz
Reported 2016-03-29 09:13:29 PDT
Patch forthcoming.
Attachments
Patch (3.10 KB, patch)
2016-03-29 09:16 PDT, mitz
andersca: review+
mitz
Comment 1 2016-03-29 09:16:42 PDT
WebKit Commit Bot
Comment 2 2016-03-29 09:17:59 PDT
Attachment 275098 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:95: Missing space before { [whitespace/braces] [5] ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:101: Missing space before { [whitespace/braces] [5] ERROR: Source/WebCore/platform/ios/WebVideoFullscreenInterfaceAVKit.mm:108: Missing space before { [whitespace/braces] [5] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3 2016-03-29 09:49:16 PDT
Note You need to log in before you can comment on or make changes to this bug.