Inline WebFullScreenVideoRootViewController.m https://bugs.webkit.org/show_bug.cgi?id=155971

Reviewed by Anders Carlsson.

* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(createFullScreenVideoRootViewControllerClass): Replaced with the code from
  WebFullScreenVideoRootViewController.m.



Canonical link: https://commits.webkit.org/174084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198783 268f45cc-cd09-0410-ab3c-d52691b4dbfc